--- a/packages/react-redux/package.json
+++ b/packages/react-redux/package.json
@@ -28,7 +28,9 @@
     "jest": "^23.6.0",
     "react": "^16.6.1",
     "react-dom": "^16.6.1",
+    "react-redux": "^5.1.1",
     "react-testing-library": "^5.2.3",
+    "redux": "^4.0.1",
     "regenerator-runtime": "^0.12.1",
     "rollup": "^0.66.6",
     "rollup-plugin-babel": "^4.0.3",
