--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,5 +33,8 @@ jobs:
             - node_modules
           key: v1-dependencies-{{ checksum "package.json" }}
 
-      # run tests!
+      - run: yarn bootstrap
+
+      - run: yarn build
+
       - run: yarn test
