Enable test runner on root level

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -8,8 +8,7 @@
   "unpkg": "dist/redux-orchestrate.min.js",
   "module": "es/redux-orchestrate.js",
   "scripts": {
-    "build": "rollup -c",
-    "test": "jest"
+    "build": "rollup -c"
   },
   "peerDependencies": {
     "redux": "^2.0.0 || ^3.0.0 || ^4.0.0"
@@ -17,11 +16,7 @@
   "devDependencies": {
     "@babel/core": "^7.1.2",
     "@babel/preset-env": "^7.1.0",
-    "babel-core": "^7.0.0-bridge.0",
-    "babel-jest": "^23.6.0",
-    "jest": "^23.6.0",
     "redux": "^4.0.1",
-    "regenerator-runtime": "^0.12.1",
     "rollup": "^0.66.6",
     "rollup-plugin-babel": "^4.0.3",
     "rollup-plugin-node-resolve": "^3.4.0",
