Update ci script for collecting coverage

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "build": "lerna run --parallel build",
     "test": "jest",
+    "test:ci": "jest --no-watchman --maxWorkers 2 --coverage && codecov",
     "examples:todos": "npm run start --prefix examples/todos",
     "examples:async-thunk": "npm run start --prefix examples/async-thunk",
     "examples:async-saga": "npm run start --prefix examples/async-saga",
@@ -20,6 +21,7 @@
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
     "babel-jest": "^23.6.0",
+    "codecov": "^3.1.0",
     "eslint": "^5.8.0",
     "eslint-config-prettier": "^3.1.0",
     "eslint-plugin-prettier": "^3.0.0",
