--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -7,6 +7,7 @@
   "main": "lib/redux-orchestrate.js",
   "unpkg": "dist/redux-orchestrate.min.js",
   "module": "es/redux-orchestrate.js",
+  "typings": "./index.d.ts",
   "scripts": {
     "build": "rollup -c"
   },
