--- a/packages/react-redux/package.json
+++ b/packages/react-redux/package.json
@@ -7,6 +7,7 @@
   "main": "lib/react-redux-orchestrate.js",
   "unpkg": "dist/react-redux-orchestrate.min.js",
   "module": "es/react-redux-orchestrate.js",
+  "typings": "./index.d.ts",
   "scripts": {
     "build": "rollup -c"
   },
