--- a/package.json
+++ b/package.json
@@ -15,22 +15,20 @@
     "bootstrap": "lerna bootstrap"
   },
   "devDependencies": {
-    "@babel/core": "^7.1.5",
-    "@babel/preset-env": "^7.1.5",
+    "@babel/core": "^7.2.2",
+    "@babel/preset-env": "^7.3.1",
     "@babel/preset-react": "^7.0.0",
-    "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
-    "babel-jest": "^23.6.0",
+    "babel-jest": "^24.1.0",
     "codecov": "^3.1.0",
     "eslint": "^5.8.0",
     "eslint-config-prettier": "^3.1.0",
     "eslint-plugin-prettier": "^3.0.0",
     "husky": "^1.1.3",
-    "jest": "^23.6.0",
+    "jest": "^24.1.0",
     "lerna": "^3.4.3",
     "lint-staged": "^8.0.4",
-    "prettier": "1.15.1",
-    "regenerator-runtime": "^0.12.1"
+    "prettier": "1.15.1"
   },
   "husky": {
     "hooks": {
