--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
     "husky": "^1.3.1",
     "jest": "^24.1.0",
     "lerna": "^3.13.0",
-    "lint-staged": "^8.1.4",
     "prettier": "1.16.4"
   },
   "husky": {
@@ -53,5 +52,8 @@
   },
   "bugs": {
     "url": "https://github.com/EdStudio/redux-orchestrate/issues"
+  },
+  "dependencies": {
+    "lint-staged": "^8.1.4"
   }
 }
