--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "homepage": "https://github.com/EdStudio/redux-orchestrate#readme",
   "scripts": {
-    "build": "lerna run --parallel build",
+    "build": "rollup -c",
     "test": "jest",
     "test:ci": "jest --no-watchman --maxWorkers 2 --coverage && codecov",
     "examples:todos": "npm run start --prefix examples/todos",
@@ -27,7 +27,12 @@
     "husky": "^1.3.1",
     "jest": "^24.1.0",
     "lerna": "^3.13.0",
-    "prettier": "1.16.4"
+    "prettier": "1.16.4",
+    "rollup": "^1.2.2",
+    "rollup-plugin-babel": "^4.3.2",
+    "rollup-plugin-node-resolve": "^4.0.0",
+    "rollup-plugin-replace": "^2.1.0",
+    "rollup-plugin-terser": "^4.0.4"
   },
   "husky": {
     "hooks": {
