--- a/packages/react-redux/package.json
+++ b/packages/react-redux/package.json
@@ -7,9 +7,7 @@
   "main": "lib/react-redux-orchestrate.js",
   "unpkg": "dist/react-redux-orchestrate.min.js",
   "module": "es/react-redux-orchestrate.js",
-  "scripts": {
-    "build": "rollup -c"
-  },
+  "scripts": {},
   "dependencies": {
     "@redux-orchestrate/core": "^0.1.0"
   },
@@ -19,19 +17,11 @@
     "redux": "^2.0.0 || ^3.0.0 || ^4.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.2.2",
-    "@babel/preset-env": "^7.3.1",
-    "@babel/preset-react": "^7.0.0",
     "react": "^16.6.1",
     "react-dom": "^16.6.1",
     "react-redux": "^5.1.1",
     "react-testing-library": "^5.2.3",
-    "redux": "^4.0.1",
-    "rollup": "^1.1.2",
-    "rollup-plugin-babel": "^4.3.2",
-    "rollup-plugin-node-resolve": "^4.0.0",
-    "rollup-plugin-replace": "^2.1.0",
-    "rollup-plugin-terser": "^4.0.4"
+    "redux": "^4.0.1"
   },
   "description": "Custom react-redux bindings for redux-orchestrate",
   "keywords": [
